# nind-denoise

./: .aiignore  .coverage  .gitignore  .roomodes  AGENTS.md  CLEANUP_REPORT.md  README.md  audit_report.md  nd  ndfon  prompt.md  pylock.toml  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.junie/: PR_proposal.md  guidelines.md
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
.roo/rules-merge-resolver/: 1_workflow.xml  2_best_practices.xml  3_tool_usage.xml  4_complete_example.xml
.roo/rules-mode-writer/: 1_mode_creation_workflow.xml  2_xml_structuring_best_practices.xml  3_mode_configuration_patterns.xml  4_instruction_file_templates.xml
src/: ImageProcessor.py  Snippet.py  denoise.py
src/config/: cli.yaml  operations.yaml
src/darktable/: dt_nind_denoise.example.ini  dt_nind_denoise.ini  dt_nind_denoise.ini.bak  dt_nind_denoise.py
src/lua-scripts/: nind_denoise_rl.lua
tests/: conftest.py  test_base.py  test_cli_smoke.py  test_config.py  test_config_and_history.py  test_config_tools.py  test_darktable_combined.py  test_deblur_stage.py  test_denoise_cli.py  test_environment_jobcontext.py  test_exif_clone.py  test_export_stage.py  test_export_verify_and_errors.py  test_imports.py  test_orchestration.py  test_orchestrator.py  test_pipeline.py  test_pipeline_utils.py  test_pipeline_validations.py  test_pytorch_deblur_registry.py  test_read_config.py  test_rl_deconvolution.py  test_rl_pt.py  test_run_cmd.py  test_ssim_pipeline.py  test_utilities.py  test_xmp_transform.py
(+102 files in other folders)
